--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -18,7 +18,6 @@
                 <li><a href="#" data-page="dashboard" class="active">📊 仪表盘</a></li>
                 <li><a href="#" data-page="players">👥 玩家管理</a></li>
                 <li><a href="#" data-page="punishments">⚖️ 处罚记录</a></li>
-                <li><a href="#" data-page="alts">🔗 关联账号</a></li>
             </ul>
 
             <div class="sidebar-footer">
@@ -84,12 +83,32 @@
 
             <div id="punishmentsPage" class="page">
                 <h1>处罚记录</h1>
-                <p>功能开发中...</p>
-            </div>
 
-            <div id="altsPage" class="page">
-                <h1>关联账号检测</h1>
-                <p>功能开发中...</p>
+                <div class="section">
+                    <div class="action-bar">
+                        <input type="text" id="punishmentSearch" placeholder="搜索玩家名称或UUID..." class="search-input">
+                        <select id="punishmentTypeFilter" class="search-input" style="flex: 0 0 150px;">
+                            <option value="">所有类型</option>
+                            <option value="BAN">封禁</option>
+                            <option value="TEMP_BAN">临时封禁</option>
+                            <option value="KICK">踢出</option>
+                            <option value="MUTE">禁言</option>
+                            <option value="TEMP_MUTE">临时禁言</option>
+                            <option value="WARNING">警告</option>
+                        </select>
+                        <select id="punishmentStatusFilter" class="search-input" style="flex: 0 0 150px;">
+                            <option value="">所有状态</option>
+                            <option value="active">生效中</option>
+                            <option value="expired">已过期</option>
+                            <option value="revoked">已撤销</option>
+                        </select>
+                        <button id="searchPunishmentsBtn" class="btn btn-primary">搜索</button>
+                    </div>
+
+                    <div id="allPunishmentsList" class="table-container">
+                        <p class="loading">加载中...</p>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
